# cpp-quiz

./: Makefile  compile_flags.txt  justfile  q177.cc  q188.cc  q197.cc  q31.cc  q319.cc  q322.cc  q33.cc  q377.cc  q393.cc
calc_sum_poc/: .gitignore  README.md  justfile
calc_sum_poc/cpp_pybind/: README.md  compile_flags.txt  justfile  pyproject.toml  setup.py
calc_sum_poc/cpp_pybind/src/calc_sum_cpp/: __init__.py  _core.cpp  bench.py
calc_sum_poc/cython_pyx/: README.md  justfile  pyproject.toml  setup.cfg  setup.py
calc_sum_poc/cython_pyx/src/calc_sum_cython/: _core.pyx  bench.py
calc_sum_poc/numba_jit/: README.md  justfile  pyproject.toml
calc_sum_poc/numba_jit/src/calc_sum_numba/: __init__.py  bench.py  core.py
calc_sum_poc/pythran_aot/: .gitignore  README.md  compile_flags.txt  justfile  pyproject.toml
calc_sum_poc/pythran_aot/scripts/: build_output.py
calc_sum_poc/pythran_aot/src/calc_sum_pythran/: bench.py  core.py
calc_sum_poc/pythran_aot/src/calc_sum_pythran/impl/: core.py
